--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,20 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-09-18T20:37:50.344933Z",
-     "start_time": "2024-09-18T20:37:50.335480Z"
-    }
+    "collapsed": true
    },
    "source": [
-    "from idlelib.query import Query\n",
-    "from itertools import groupby\n",
-    "\n",
     "import pandas as pd\n",
     "import sqlite3 as sql\n",
-    "import numpy as np\n",
-    "from IPython.testing.decorators import onlyif\n",
     "\n",
     "conn = sql.connect(\"a1db.db\")\n",
     "sql_query = \"SELECT * FROM nesreca;\"\n",
@@ -25,15 +16,10 @@
     "df1.to_csv(\"a1db.csv\")"
    ],
    "outputs": [],
-   "execution_count": 39
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-18T21:06:23.070866Z",
-     "start_time": "2024-09-18T21:06:23.061120Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "sql_query_nesreca = \"SELECT * FROM nesreca;\"\n",
@@ -48,7 +34,7 @@
    ],
    "id": "7205f6d222cd59ba",
    "outputs": [],
-   "execution_count": 45
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -57,12 +43,7 @@
    "id": "12c97d49a7eab9fb"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-19T15:41:35.235488Z",
-     "start_time": "2024-09-19T15:41:35.228169Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
@@ -72,29 +53,23 @@
     "pd.set_option('display.max_rows', 99999999)\n"
    ],
    "id": "9852df3dc4aeba5a",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
-   "execution_count": 83
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-19T15:54:46.950922Z",
-     "start_time": "2024-09-19T15:54:46.944871Z"
+     "end_time": "2024-09-19T22:38:56.683651Z",
+     "start_time": "2024-09-19T22:38:56.650055Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "##print ( dataFrame_nesreca.join(dataFrame_oseba, how='left',lsuffix='_nesreca',rsuffix='_oseba')  )\n",
-    "##print(dataFrame_nesreca[\"stacionazna_ali_hisna_st\"].isnull().sum())\n",
-    "##print(dataFrame_upravna_enota[dataFrame_upravna_enota['st_prebivalcev']==\"0\"])"
+    "##Q1 ##print ( dataFrame_nesreca.join(dataFrame_oseba, how='left',lsuffix='_nesreca',rsuffix='_oseba')  )\n",
+    "##Q2 ##print(dataFrame_nesreca[\"stacionazna_ali_hisna_st\"].isnull().sum())\n",
+    "##Q3 ##print(dataFrame_upravna_enota[dataFrame_upravna_enota['st_prebivalcev']==\"0\"])\n",
+    "##Q4 ##print(dataFrame_oseba[dataFrame_oseba['vozniski_staz_LL']==\"1\"])\n",
+    "print(dataFrame_nesreca.groupby(\"stanje_povrsina_vozisce\").size().reset_index(name='RECORD COUNT'))\n"
    ],
    "id": "e42310f669aa0a82",
    "outputs": [
@@ -102,21 +77,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id_upravna_enota ime_upravna_enota st_prebivalcev povrsina\n",
-      "62             5598               MNZ              0        0\n",
-      "63             5599           Neznana              0        0\n"
+      "  stanje_povrsina_vozisce  RECORD COUNT\n",
+      "0                       A            97\n",
+      "1                       M             2\n",
+      "2                       O             1\n"
      ]
     }
    ],
-   "execution_count": 91
+   "execution_count": 16
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "ead4be884db4dcad"
+   "id": "ead4be884db4dcad",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
